--- a/package.json
+++ b/package.json
@@ -2,19 +2,19 @@
   "name": "client-satisfaction",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
+    "serve": "vue-cli-service serve",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vue-cli-service preview"
   },
   "dependencies": {
+    "@vue/cli": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "sass-loader": "^16.0.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.1",
-    "sass": "^1.83.4",
-    "vite": "^6.0.5"
+    "sass": "^1.83.4"
   }
 }
