--- a/package.json
+++ b/package.json
@@ -1,20 +1,47 @@
 {
-  "name": "client-satisfaction",
+  "name": "scl_2",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "preview": "vue-cli-service lint"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@vue/cli": "^5.0.8",
-    "@vue/cli-service": "^5.0.8",
-    "sass-loader": "^16.0.4",
-    "vue": "^3.5.13",
+    "axios": "^1.7.9",
+    "core-js": "^3.8.3",
+    "vue": "^3.2.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "sass": "^1.83.4"
-  }
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.83.4",
+    "sass-loader": "^16.0.4"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "@babel/eslint-parser"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead",
+    "not ie 11"
+  ]
 }
